<resources>
    <string name="app_name">Karry</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="SplashscreenActivity_splashLogo_contentDescription">Logo Karry</string>
    <string name="LoginActivity_loginLogo_contentDescription">Logo Karry</string>
    <string name="LoginActivity_inputEmail_hint">Email</string>
    <string name="LoginActivity_logoutButton">Déconnexion</string>
    <string name="LoginActivity_inputPassword_hint">Mot de passe</string>
    <string name="LoginActivity_buttonLogin_text">Se connecter</string>
    <string name="LoginActivity_linkForgotPassword_text">Mot de passe oublié ?</string>
    <string name="LoginActivity_dontHaveAccount_text">Vous n\'avez pas encore de compte ?</string>
    <string name="LoginActivity_createCount_link">Créez-en un maintenant</string>
    <string name="LoginActivity_loginError_text">Une erreur s\'est produite lors de votre connexion</string>
    <string name="LoginActivity_socialNetwork_text">Connectez vous avec les réseaux sociaux</string>
    <string name="RegisterActivity_registerLogo_contentDescription">Logo Karry</string>
    <string name="RegisterActivity_registerFirstname_hint">Prénom</string>
    <string name="RegisterActivity_registerLastname_hint">Nom</string>
    <string name="RegisterActivity_registerEmail_hint">Email</string>
    <string name="RegisterActivity_registerPhone_hint">Téléphone</string>
    <string name="RegisterActivity_registerPassword_hint">Mot de passe</string>
    <string name="RegisterActivity_registerConfirmPassword_hint">Confirmez mot de passe</string>
    <string name="RegisterActivity_socialNetwork_text">Inscrivez vous avec les réseaux sociaux</string>
    <string name="RegisterActivity_errorMessage_text">Une erreur s\'est produite lors de votre inscription</string>
    <string name="RegisterActivity_haveAccount_text">Vous possédez déjà un compte ?</string>
    <string name="RegisterActivity_haveAccount_link">Se connecter</string>
    <string name="RegisterActivity_buttonRegister_text">S\'inscrire</string>
    <string name="CompleteProfil_name_example">Adrien F.</string>
    <string name="CompleteProfil_text_presentation_name">Nous afficherons votre profil comme l’exemple ci-dessus.
    </string>
    <string name="CompleteProfil_text_description">Complétez votre profil</string>
    <string name="CompleteProfil_help_edit_telephone">Votre numéro ne sera pas communiqué sans votre accord</string>
    <string name="CompleteProfil_text_btn_enregistrer">Enregistrer</string>
    <string name="AddPhotoProfil_title_photo_profil">Votre photo de profil</string>
    <string name="AddPhotoProfil_text_description">Ajoutez une photo de profil, pour que notre communauté puisse mettre
        un visage sur votre prénom 😉
    </string>
    <string name="AddPhotoProfil_text_btn_ajout">Ajouter</string>
    <string name="AddPhotoProfil_link_ignore">Ignorer pour l\'instant</string>
    <string name="MainActivity_bottomNavigation_searchTitle">Recherche</string>
    <string name="MainActivity_bottomNavigation_tripsTitle">Voyages</string>
    <string name="MainActivity_bottomNavigation_chatTitle">Chat</string>
    <string name="MainActivity_bottomNavigation_profileTitle">Profil</string>
    <string name="MainActivity_bottomNavigation_updateProfileTitle">Modifier mon profil</string>
    <string name="MainActivity_bottomNavigation_updateProfileButtonTitle">Modifier</string>
    <string name="announcementActivity_userName">Adrien F.</string>
    <string name="announcementActivity_seeProfil_link">Voir le profil</string>
    <string name="announcementActivity_reviews">4,8/5</string>
    <string name="announcementActivity_capacity">Quelques mots</string>
    <string name="announcementActivity_description">Capacités du voyageur:</string>
    <string name="announcementActivity_subtitleWeight">Peut transporter:</string>
    <string name="announcementActivity_subtitleTax">Taxe:</string>
    <string name="announcementActivity_subtitleNumber">Commandes max:</string>
    <string name="announcementActivity_subtitleDisponibility">Disponible jusqu\'au:</string>
    <string name="announcementActivity_buttonSendMessage">Contacter</string>
    <string name="announcementActivity_textLiveIn">Départ de</string>
    <string name="announcementActivity_textGoTo">Se rend à</string>
    <string name="announcementActivity_textDate">le</string>
    <string name="announcementActivity_textDateBack">jusqu\'au</string>
    <string name="announcementActivity_titleDetail">Détail du voyage</string>
    <string name="ProfileFragment_logoutButton_text">Se déconnecter</string>
    <string name="title_activity_trip_form">TripFormActivity</string>
    <string name="ProfileFragment_profilePicture_contentDescription">Image du profil</string>
    <string name="ProfilFragment_titleProfil">Profil</string>
    <string name="tripFragment_titleTripList">Mes voyages</string>
    <string name="tripFragment_placeholderTripList">Il semble que vous n\'avez jamais créé de voyage</string>
    <string name="tripFragment_placeholderTripList_link">Créez-en un maintenant</string>
    <string name="TripFormActivity_TripPageTitle_text">Créer un voyage</string>
    <string name="TripFormActivity_tripSubtitleMain_text">Informations générales</string>
    <string name="TripFormActivity_tripFormDescription_hint">Description</string>
    <string name="TripFormActivity_tripFormButton_text">Créer le voyage</string>
    <string name="searchResultActivity_resultLabel">Résultat pour la recherche:</string>
    <string name="searchResultActivity_error">Il semble qu\'il n\'existe pas de voyage pour votre recherche</string>
    <string name="searchResultActivity_result">PARIS (FR)</string>
    <string name="searchResultActivity_noTripTitle">Vous n\'avez pas trouvé de voyageurs ?</string>
    <string name="searchResultActivity_noTripSubtitle">Postez votre annonce et recevez une notification lorsqu\'un
        profil correspond à vos besoins
    </string>
    <string name="searchResultActivity_noTripButton">Postez une annonce</string>
    <string name="searchResultActivity_propsalUserAvatarDescription">Avatar of the traveler who make the proposal
    </string>
    <string name="searchResultActivity_propsalUserNameDescription">Traveler name</string>
    <string name="searchResultActivity_availableProductIcon">Available Product Icon</string>
    <string name="searchResultActivity_proposalLocationIcon">proposal location icon</string>
    <string name="searchResultActivity_seeSearchResultsDetails">Voir détails</string>
    <string name="searchResultActivity_seeProfile">Voir le profil</string>
    <string name="searchResultActivity_descriptionPlaceholder">Description</string>
    <string name="searchResultActivity_defaultRate">4.8</string>
    <string name="searchResultActivity_defaultDate">02/01/19</string>
    <string name="searchResultActivity_defaultName">John D.</string>
    <string name="searchResultActivity_emptyDate"></string>
    <string name="searchResultActivity_searchResultPlaceholder">Résultats pour la recherche:</string>
    <string name="searchResultActivity_searchResultPlaceholderDetails">Détails du voyage</string>
    <string name="searchResultActivity_buttonHintContact">Contacter</string>
    <string name="searchResultActivity_availableWeight">Poids (KG)</string>
    <string name="searchResultActivity_karryTax">Tips (€)</string>
    <string name="searchResultActivity_maxAmount">Taille</string>
    <string name="searchResultActivity_tripDetailsInformationsPlaceholder">Informations</string>
    <string name="searchResultActivity_tripDetailsAvailabilityPlaceholder">Disponibilitées</string>
    <string name="searchResultActivity_tripDetailsTitle">Détails de ma commande</string>
    <string name="TravelerProfileFragment_trips_stats">Voyages</string>
    <string name="TravelerProfileFragment_transactions_stats">Echanges</string>
    <string name="TravelerProfileFragment_rate_stats">Note</string>
    <string name="SearchFragment_searchIntroduction_text">Vous cherchez un voyageur qui va &#8230;</string>
    <string name="SearchFragment_searchBeginSearch_text">Commencez à chercher des voyageurs !</string>
    <string name="SearchFragment_searchDepartureCity_hint">de Pékin</string>
    <string name="SearchFragment_searchDestinationCity_hint">à Paris</string>
    <string name="SearchFragment_searchBottomTooltip">Vous partez bientot et pouvez \n ramener un produit à quelqu\'un
        ?
    </string>
    <string name="SearchFragment_postTripTooltipButton">Dites nous où vous partez</string>
    <string name="SearchFragment_Title">Recherche de voyageurs</string>
    <string name="SearchFragment_destinationLabel">Où se trouve votre produit ?</string>
    <string name="SearchFragment_departureLabel">Où souhaitez vous être livré ?</string>
    <string name="accountActivity_buttonUpdateInformation">Modifier mes informations</string>
    <string name="accountActivity_text_voyage_profil">Voyages</string>
    <string name="accountActivity_text_exchange_profil">Echanges</string>
    <string name="accountActivity_text_score_profil">Notes</string>
    <string name="accountActivity_title_comments">Commentaires</string>
    <string name="accountActivity_text_comments">“Merci pour le magret et le fromage! Ça manque vraiment trop ici !!!”
    </string>
    <string name="accountActivity_text_comments_date">Le 10 septembre 2018</string>
    <string name="accountActivity_title_description">Description</string>
    <string name="accountActivity_text_description">Expat’ à Johannesbourg depuis 2 ans. Je viens sur Paris entre 2 et 3
        fois par an seulement 😥 , mais ca me permet de ramener du confit de canard et du fromage en masse 😅 !
    </string>
    <string name="tchatFragment_title">Messagerie</string>
    <string name="tchatFragment_navigation_message">Messages</string>
    <string name="tchatFragment_navigation_contact">Demande de contact</string>
    <string name="tchatFragment_tips">Récompense proposé</string>
    <string name="tchatFragment_acceptButton">Accepter la demande</string>
    <string name="tchatFragment_rejectButton">Refuser la demande</string>
    <string name="orderFormActivity_title">Demande de contact</string>
    <string name="orderFormActivity_name">Nom du produit recherché</string>
    <string name="orderFormActivity_hint_name">ex: huile d\'olive, sneakers ...</string>
    <string name="orderFormActivity_reward">Montant de la récompense</string>
    <string name="orderFormActivity_hint_reward">0,00€</string>
    <string name="orderFormActivity_price">Prix estimé du produit</string>
    <string name="orderFormActivity_volume">Volume estimé du produit</string>
    <string name="orderFormActivity_weight">Poids estimé du produit</string>
    <string name="orderFormActivity_message">Message personnalisé</string>
    <string name="OrderFormFragment_errorSaveForm">Veuillez compléter tous les champs</string>
    <string name="rating_header">Transaction du</string>
    <string name="rating_form_header">Cool 👍</string>
    <string name="rating_form_subtitle">Votre transaction est terminée</string>
    <string name="rating_form_label">Comment noteriez-vous l’expérience?</string>
    <string name="rating_form_hint_comment">Laisser un commentaire (facultatif)</string>
    <string name="rating_form_btn_text">Envoyer</string>
    <string name="city_Paris">Paris</string>
    <string name="HelpDialog_title">2 voyages seront créés sur l’app.</string>
    <string name="HelpDialog_content">Lors d’un voyage aller-retour, nous créons 2 voyages : 1 pour l’aller  et un pour le retour. Vous serez donc contacté soit pour l’un, soit pour l’autre.</string>
    <string name="HelpDialog_content_part_2">ex: pour un Paris-Rome aller-retour, les 2 voyages seront Paris->Rome et Rome->Paris</string>
    <string name="HelpDialog_closeButton">J\'ai compris !</string>
</resources>