<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_search"
            android:icon="@drawable/ic_search"
            android:title="@string/MainActivity_bottomNavigation_searchTitle"/>

    <item
            android:id="@+id/navigation_trips"
            android:icon="@drawable/ic_trips"
            android:title="@string/MainActivity_bottomNavigation_tripsTitle"/>

    <item
            android:id="@+id/navigation_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/MainActivity_bottomNavigation_chatTitle"/>


    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/MainActivity_bottomNavigation_profileTitle"/>
</menu>