<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        tools:context=".activities.RegisterActivity" android:id="@+id/completeProfil" android:layout_gravity="center">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/linearLayout26">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:gravity="center" android:layout_margin="16dp">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
                    android:id="@+id/profilePicture"
                    app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/profileExampleName"
                    app:layout_constraintStart_toEndOf="@+id/profilePicture"
                    app:layout_constraintTop_toTopOf="@+id/profilePicture"
                    android:text="@string/CompleteProfil_name_example"
                    style="@style/userNameTrip" android:layout_marginTop="12dp"/>
            <TextView
                    android:text="@string/CompleteProfil_text_presentation_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4" style="@style/textSmallGrey"
                    android:textAlignment="center" android:layout_marginTop="24dp" android:textSize="16sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    app:layout_constraintStart_toEndOf="@+id/profilePicture"
                    app:layout_constraintTop_toTopOf="@+id/profilePicture"
                    android:text="@string/CompleteProfil_text_description"
                    style="@style/userNameTrip" android:layout_marginTop="24dp"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editLastnameProfil" android:layout_marginTop="12dp"
                    style="@style/inputGreyAntraciteBold" android:textSize="16sp"
                    android:hint="@string/RegisterActivity_registerLastname_hint"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editFirstnameProfil" android:layout_marginTop="12dp"
                    style="@style/inputGreyAntraciteBold" android:textSize="16sp"
                    android:hint="@string/RegisterActivity_registerFirstname_hint"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editTextPhoneProfil" android:layout_marginTop="12dp"
                    style="@style/inputGreyAntraciteBold" android:textSize="16sp"
                    android:hint="@string/RegisterActivity_registerPhone_hint"/>
            <TextView
                    android:text="@string/CompleteProfil_help_edit_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" style="@style/textSmallGrey"
                    android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout26">

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/completeRegisterProgress"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/button_complete_profile"
                app:layout_constraintStart_toStartOf="@+id/button_complete_profile"
                app:layout_constraintBottom_toBottomOf="@+id/button_complete_profile"
                app:layout_constraintTop_toTopOf="@+id/button_complete_profile"/>
        <Button
                android:text="@string/CompleteProfil_text_btn_enregistrer"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/button_complete_profile"
                style="@style/buttonGreenFull"
                android:background="@drawable/btn_rounded_normal"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="45dp"
                android:layout_marginEnd="45dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/completeRegisterError"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button_complete_profile"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textColor="#dc3545" android:gravity="center"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>