<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="18dp" android:layout_marginEnd="18dp"
            android:layout_marginBottom="8dp" android:paddingBottom="8dp"
            android:background="@drawable/bg_input_profile" android:layout_marginTop="18dp" android:gravity="center">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_helper" android:id="@+id/imageView7"
                android:layout_weight="1"/>
        <TextView
                android:text="@string/HelpDialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView41"
                android:layout_weight="10" android:textSize="18sp" android:textColor="@color/colorDarkBLue"
                android:paddingStart="8dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/HelpDialog_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView43"
                android:layout_marginStart="18dp" android:layout_marginEnd="18dp" android:textColor="@color/black"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/HelpDialog_content_part_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView45" android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp" android:layout_marginTop="8dp"
                android:textColor="@color/colorDarkBLue" android:layout_marginBottom="18dp" android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <Button
                android:id="@+id/skipButton"
                android:text="@string/HelpDialog_closeButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:background="@android:color/transparent"
                android:textColor="@color/green_karry" android:textAllCaps="false" android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>