<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:id="@+id/linearLayout22">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout23">
        <TextView
                android:text="@string/rating_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ratingForm_header"
                android:textStyle="bold"

                android:textSize="24sp"
                android:textColor="#004E64"

                android:paddingStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="26dp"
                android:layout_marginStart="8dp"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rating_trip_date" android:layout_weight="1"
                android:textStyle="bold"

                android:textSize="24sp"
                android:textColor="#004E64"

                android:layout_marginEnd="8dp"
                android:layout_marginTop="26dp"
                android:layout_marginStart="8dp"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout23"
            android:gravity="center" android:id="@+id/linearLayout24">
        <TextView
                android:text="@string/rating_form_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/rating_header"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="#121212"
        />
        <TextView
                android:text="@string/rating_form_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rating_label" android:gravity="center"
                android:textSize="18sp"/>
        <TextView
                android:text="@string/rating_form_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rating_text" android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" android:layout_marginTop="24dp" android:gravity="center"/>
        <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/ratingBar" android:numStars="5"
                android:progressTint="#4CEBA0" android:progressBackgroundTint="#DADADA"
                android:stepSize="1" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="6"
                android:gravity="top"
                android:verticalScrollbarPosition="right"
                android:scrollbars="vertical"
                android:ems="10"
                android:id="@+id/edit_comment" android:hint="@string/rating_form_hint_comment"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="45dp" android:layout_marginEnd="45dp"/>
    </LinearLayout>

    <Button
            android:text="@string/rating_form_btn_text"
            android:id="@+id/btn_sendForm"
            android:shadowRadius="0"
            android:layout_width="match_parent"
            android:background="@drawable/btn_rounded_normal"
            style="?android:attr/borderlessButtonStyle" android:textColor="@android:color/white"
            android:layout_height="55dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="45dp" android:layout_marginEnd="45dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout24"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_progressBar"
            app:layout_constraintBottom_toBottomOf="@+id/btn_sendForm"
            app:layout_constraintTop_toTopOf="@+id/btn_sendForm" app:layout_constraintEnd_toEndOf="@+id/btn_sendForm"
            app:layout_constraintStart_toStartOf="@+id/btn_sendForm" android:visibility="invisible"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/error_sendForm"
            app:layout_constraintTop_toBottomOf="@+id/btn_sendForm" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="45dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="45dp" android:layout_marginTop="16dp"
            android:text="@string/OrderFormFragment_errorSaveForm"
            android:visibility="invisible"
            android:textColor="#dc3545"/>

</androidx.constraintlayout.widget.ConstraintLayout>