<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AccountActivity">

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline11" app:layout_constraintGuide_begin="24dp"
                                          android:orientation="horizontal"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/imageProfil"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="@+id/guideline11"/>
    <TextView
            android:text="@string/announcementActivity_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textUserName2"
            app:layout_constraintTop_toBottomOf="@+id/imageProfil" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/city_Paris"
            android:layout_width="wrap_content"
            android:layout_height="16dp" android:id="@+id/textUserName3"
            app:layout_constraintTop_toBottomOf="@+id/textUserName2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/announcementActivity_buttonSendMessage"
            android:layout_width="wrap_content"
            android:id="@+id/buttonSendMessage2"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/buttonSmallTransparent"
            android:background="@drawable/smallroundedbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintBottom_toTopOf="@+id/buttonSendProposition"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/textUserName3" android:layout_marginTop="24dp"/>
</android.support.constraint.ConstraintLayout>